--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,4 +38,23 @@
   <script src="{{"http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"| prepend: site.baseurl }}" type="text/javascript"></script>-->
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+
+<meta property="og:title" content="BEAMS">
+<meta property="og:site_name" content="BEAMS">
+<meta property="og:url" content="http://beamsociety.ca/">
+<meta property="og:description" content="BioEngineering At McMaster Society (BEAMS) - a student-run society designed to serve and represent students currently in or interested in a BioEngineering program at McMaster University. This website is your go-to resource for information regarding upcoming events held by BEAMS.">
+<meta property="fb:app_id" content="">
+<meta property="og:type" content="website">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@beamsociety">
+<meta name="twitter:title" content="BEAMS">
+<meta name="twitter:description" content="BioEngineering At McMaster Society (BEAMS) - a student-run society designed to serve and represent students currently in or interested in a BioEngineering program at McMaster University. This website is your go-to resource for information regarding upcoming events held by BEAMS.">
+<meta name="twitter:image:src" content="http://beamsociety.ca/images/logo-bordered.png">
+
+<meta charset="utf-8">
+<meta name="description" content="BioEngineering At McMaster Society (BEAMS) - a student-run society designed to serve and represent students currently in or interested in a BioEngineering program at McMaster University. This website is your go-to resource for information regarding upcoming events held by BEAMS.">
+<meta name="robots" content="index, follow">
+<meta name="author" content="BEAMS, designed by Kushal Panchal ">
+<title>BEAMS</title>
 </head>
