once again meta update

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,14 +44,14 @@
 <meta property="og:url" content="http://beamsociety.ca/">
 <meta property="og:description" content="BioEngineering At McMaster Society (BEAMS) - a student-run society designed to serve and represent students currently in or interested in a BioEngineering program at McMaster University.">
 <meta property="fb:app_id" content="https://www.facebook.com/beamsociety.ca/">
-<meta property="og:image" content="http://beamsociety.ca/images/beams_2016.jpg" />
+<meta property="og:image" content="http://beamsociety.ca/images/beams_2016.png" />
 <meta property="og:type" content="website">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@beamsociety">
 <meta name="twitter:title" content="BEAMS">
 <meta name="twitter:description" content="BioEngineering At McMaster Society (BEAMS) - a student-run society designed to serve and represent students currently in or interested in a BioEngineering program at McMaster University.">
-<meta name="twitter:image:src" content="http://beamsociety.ca/images/beams_2016.jpg">
+<meta name="twitter:image:src" content="http://beamsociety.ca/images/beams_2016.png">
 
 <meta charset="utf-8">
 <meta name="description" content="BioEngineering At McMaster Society (BEAMS) - a student-run society designed to serve and represent students currently in or interested in a BioEngineering program at McMaster University.">
