fixed footer link issue, updated contact email, new post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,9 @@
           <img alt="" src="{{site.url}}/images/logo-grey.png" />
         </a>
       </h1>
-      <p>©2015 <a href="www.beamsociety.ca">BEAMS</a></p>
+      <p>©2018 <a href="www.beamsociety.ca">BEAMS</a></p>
       <p>Designed by <a href="http://kushalpanchal.me">Kushal Panchal</a></p>
+	  <p>Maintained by <a href="https://www.linkedin.com/in/darren-tj-chang">Darren Chang</a></p>
       <div class='spacing'></div>
       <div class='spacing'></div>
     </div>
@@ -17,12 +18,12 @@
       <div class='links'>
         <h4>Some pages</h4>
         <ul>
-          <li><a href="index.html">Events</a></li>
-          <li><a href="index.html">Bioengineering News</a></li>
-          <li><a href="about.html">About BEAMS</a></li>
-          <li><a href="about.html">Meet the Team</a></li>
-          <li><a href="academics.html">Program Information</a></li>
-          <li><a href="contact.html">Contact us</a></li>
+          <li><a href="http://beamsociety.ca/index.html">Events</a></li>
+          <li><a href="http://beamsociety.ca/index.html">Bioengineering News</a></li>
+          <li><a href="http://beamsociety.ca/about.html">About BEAMS</a></li>
+          <li><a href="http://beamsociety.ca/about.html">Meet the Team</a></li>
+          <li><a href="http://beamsociety.ca/academics.html">Program Information</a></li>
+          <li><a href="http://beamsociety.ca/contact.html">Contact us</a></li>
 
         </ul>
       </div>
@@ -56,7 +57,7 @@
           </a>
         </li>
         <li>
-          <a href='contact.html'>
+          <a href='http://beamsociety.ca/contact.html'>
             <i class='fa fa-envelope'></i>
           </a>
         </li>
