fixed css, bug updated post

--- a/css/style.css
+++ b/css/style.css
@@ -3648,9 +3648,9 @@ body {
 }
 @media only screen and (max-width: 60em) {
   .modTeamMember .overlay {
-    opacity: 1;
-    background-color: rgba(255, 255, 255, 0.8);
-    top: 0;
+    /*opacity: 1;*/
+    /*background-color: rgba(255, 255, 255, 0.8);*/
+    /*top: 0;*/
   }
   .modTeamMember .overlay .intro {
     width: 100%;
