--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
       </h1>
       <p>©2018 <a href="www.beamsociety.ca">BEAMS</a></p>
       <p>Designed by <a href="http://kushalpanchal.me">Kushal Panchal</a></p>
-	  <p>Maintained by <a href="https://www.linkedin.com/in/darren-tj-chang">Darren Chang</a></p>
+	  <p>Maintained by <a href="https://www.linkedin.com/in/alexandersotra/">Alexander Sotra</a></p>
       <div class='spacing'></div>
       <div class='spacing'></div>
     </div>
